Improved table formatting on compare.html. Fixed spacing issues across other pages.

--- a/api/static/welcome.css
+++ b/api/static/welcome.css
@@ -16,7 +16,6 @@ ul{
 ul li{
   display: inline-block;
 }
-
 ul li a{
   text-decoration: none;
   color: #fff;
@@ -25,7 +24,6 @@ ul li a{
   transition: .6s ease;
   border-radius: 20px;
 }
-
 ul li a:hover{
   background-color: #fff;
   color: #000;
@@ -34,11 +32,8 @@ ul li.active a{
   background-color: #fff;
   color: #000;
 }
-.compare-it-header {
-  text-align: center;
-}
-
 .compare-it-header h1 {
+  text-align: center;
   color: #fff;
   font-size: 30px;
   font-family: 'Impact', sans-serif;
@@ -47,11 +42,11 @@ ul li.active a{
     2px -2px 0 black,
     -2px 2px 0 black,
     2px 2px 0 black;
-  display: inline-block;
 }
 .compare-it-header span {
   font-family: 'Impact', sans-serif;
-  color: lightpink;
+  color: crimson;
+  text-align: center;
 }
 body {
     height: 100%;
@@ -64,24 +59,54 @@ body {
     background-position: center;
   }
 
+  /*white box for login.html*/
 .login-wrapper {
     background-color: #fff;
     width: 358px;
     height: 588px;
     border-radius: 15px;
-    padding: 0 50px;
+    padding: 50px;
     position: relative;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
 }
 
-.login-wrapper2 {
+/*white box for register.html*/
+.register-wrapper {
   background-color: #fff;
   width: 358px;
-  height: 758px;
+  height: 770px;
   border-radius: 15px;
-  padding: 0 50px;
+  padding-left: 30px;
+  padding-right: 50px;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  position: relative;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+  /*white box for registration_result.html*/
+.regresult-wrapper {
+  background-color: #fff;
+  width: 358px;
+  height: 150px;
+  border-radius: 15px;
+  padding: 50px;
+  position: relative;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+/*white box for compare.html*/
+.compare-wrapper {
+  background-color: #fff;
+  width: 700px;
+  height: 700px;
+  border-radius: 15px;
+  padding: 50px;
   position: relative;
   left: 50%;
   top: 50%;
@@ -89,15 +114,15 @@ body {
 }
 
 .info-wrapper {
-    background-color: #fff;
-    width: 900px;
-    height: 700px;
-    border-radius: 15px;
-    padding: 0 50px;
-    position: relative;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
+  background-color: #fff;
+  width: 900px;
+  height: 700px;
+  border-radius: 15px;
+  padding: 50px;
+  position: relative;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .form-wrapper {
@@ -109,8 +134,7 @@ body {
     font-size: 38px;
     font-weight: bold;
     text-align: center;
-    line-height: 200px; 
-    
+    line-height: 200px;  
 }
 .input-item {
     display: block;
@@ -129,10 +153,11 @@ body {
     text-align: center;
     padding: 10px;
     width: 100%;
-    margin-top: 40px;
+    margin-top: 5px;
     background-image: linear-gradient(to right, crimson, lightpink);
     color: #fff;
 }
+
 .msg {
     text-align: center;
     line-height: 88px;
@@ -147,6 +172,7 @@ a {
     max-width: 900px; /* 设置表格容器的最大宽度 */
     overflow-x: auto; /* 设置X轴方向上出现滚动条 */
     overflow-y: auto; /* 设置Y轴方向上出现滚动条 */
+    margin-top: 20px;
 }
 
 table {
@@ -374,5 +400,99 @@ footer {
 .title h1{
   color: #fff;
   font-size: 70px;
-  /* font-family: Century Gothic; */
+}
+
+/* navigation menu */
+/* .navbar {
+  overflow: hidden;
+  background-color: #343a40;
+}
+
+.dropdown {
+  float: left;
+}
+
+.dropbtn {
+  font-size: 16px;  
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+ */
+
+.navbar {
+  overflow: hidden;
+  background-color: #343a40;
+}
+
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
+
+.dropbtn {
+  font-size: 16px;  
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
 }
